--- a/css/style.css
+++ b/css/style.css
@@ -1645,9 +1645,9 @@ blockquote { border-color: #f7c51e; }
 
 /* Slider Content */
 .carousel-content { position: relative; max-height: 100%; z-index: 0; }
-@media (min-width: 992px) { .carousel-content { background: rgba(51, 51, 51, 0.9); position: absolute; padding: 20px; width: 540px; top: 18%; left: calc( 50% - 270px ); } }
-@media (min-width: 1200px) { .carousel-content { top: 20%; width: 500px; left: calc( 50% - 250px ); } }
-@media (min-width: 1450px) { .carousel-content { width: 480px; margin-left: 0; padding: 30px; left: inherit; } }
+@media (min-width: 992px) { .carousel-content { background: rgba(51, 51, 51, 0.9); position: absolute; padding: 20px; width: 540px; top: 18%; right:55px; /*left: calc( 50% - 270px );*/ } }
+@media (min-width: 1200px) { .carousel-content { top: 30%; width: 560px; right: 55px;/*left: calc( 50% - 250px );*/ } }
+@media (min-width: 1450px) { .carousel-content { width: 560px; margin-left: 0px; padding: 30px; left: inherit; } }
 @media (min-width: 1700px) { .carousel-content { top: 25%; } }
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img { width: 100%; }
@@ -1658,6 +1658,7 @@ blockquote { border-color: #f7c51e; }
 .jumbotron__category h6 { margin: 0; color: #f7c51e; }
 
 .jumbotron__title h1 { font-size: 20px; color: #eeeeee; }
+.jumbotron__title h3 { font-size: 16px; color: #eeeeee; font-weight: normal; font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
 @media (min-width: 480px) { .jumbotron__title h1 { font-size: 25px; } }
 @media (min-width: 992px) { .jumbotron__title h1 { margin: 18px 0 10px 0; } }
 @media (min-width: 1200px) { .jumbotron__title h1 { font-size: 30px; } }
